# WhirPlonk

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_AUDIT_REPORT.md  rust_whir_output.txt
.claude/: settings.local.json
.claude/commands/: README.md
.sync/backup-before-dev-20260525-153835/cpp/tests/: CMakeLists.txt  dump_algebra_fields.cpp  dump_algebra_ntt.cpp  dump_algebra_utils.cpp  dump_golden_algebra.cpp  dump_hash.cpp  dump_irs_commit.cpp  dump_pow.cpp  dump_whir_zk.cpp  test_cuda_irs_commit.cpp  test_cuda_merkle_sha256.cpp  test_cuda_ntt.cpp  test_cuda_rs_encode.cpp  test_cuda_rs_leaf_hash.cpp  test_protocols.cpp
cpp/: CMakeLists.txt  GPU_ACCELERATION.md  README.md  main.cpp
cpp/bench/: bench_merkle_path_compare.cpp  bench_ntt.cpp  bench_ntt_compare.cpp  bench_rs_encode_compare.cpp  bench_rs_sha256_leaf_hash_compare.cpp  debug_cuda_ntt.cpp
cpp/build_cross_language_golden/: CMakeCache.txt
cpp/build_cross_language_golden/tests/: test_protocols[1]_include.cmake
cpp/build_cuda/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bench_irs_cuda_compare.exp  bench_irs_cuda_compare.lib  bench_merkle_path_compare.exp  bench_merkle_path_compare.lib  bench_merkle_sha256_compare.exp  bench_merkle_sha256_compare.lib  bench_ntt.exp  bench_ntt.lib  bench_ntt_compare.exp  bench_ntt_compare.lib  bench_rs_encode.exp  bench_rs_encode.lib  bench_rs_encode_bytes_compare.exp  bench_rs_encode_bytes_compare.lib  bench_rs_encode_compare.exp  bench_rs_encode_compare.lib  bench_rs_leaf_hash_compare.exp  bench_rs_leaf_hash_compare.lib  bench_rs_sha256_leaf_hash_compare.exp  bench_rs_sha256_leaf_hash_compare.lib  bench_rs_sha256_merkle_compare.exp  bench_rs_sha256_merkle_compare.lib  cmake_install.cmake  whir_cli.exp  whir_cli.lib  whir_cuda.lib  whir_thirdparty.lib
cpp/build_cuda/lib/: gtest_main.lib
cpp/build_cuda/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_1b6f52d5dc.json  cmake_test_discovery_61238a91a2.json  cmake_test_discovery_65c378308a.json  cmake_test_discovery_96a21c966b.json  cmake_test_discovery_a0ab62599d.json  cmake_test_discovery_ac02f38954.json  cmake_test_discovery_b0484bae63.json  cmake_test_discovery_b2a4246e6f.json  cmake_test_discovery_e66388ffd8.json  cmake_test_discovery_ee6636b7a6.json  demo_irs_commit.exp  demo_irs_commit.lib  demo_open_verify.exp  demo_open_verify.lib  dump_algebra_ntt.exp  dump_algebra_ntt.lib  dump_golden_algebra.exp  dump_golden_algebra.lib  dump_irs_commit.exp  dump_irs_commit.lib  dump_matrix_commit.exp  dump_matrix_commit.lib  dump_whir.exp  dump_whir.lib  dump_whir_zk.exp  dump_whir_zk.lib  test_cuda_irs_commit.exp  test_cuda_irs_commit.lib  test_cuda_irs_commit[1]_include.cmake  test_cuda_irs_commit[1]_tests.cmake  test_cuda_merkle_path.exp  test_cuda_merkle_path.lib  test_cuda_merkle_path[1]_include.cmake  test_cuda_merkle_path[1]_tests.cmake  test_cuda_merkle_sha256.exp  test_cuda_merkle_sha256.lib  test_cuda_merkle_sha256[1]_include.cmake  (+29 more)
cpp/build_cuda_test/: CMakeCache.txt
cpp/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/build_mingw_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/build_mingw_simd_avx2/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/cuda/: cuda_integration.hpp  cuda_ntt.cu  cuda_ntt.cuh  cuda_ntt.hpp
cpp/demo/: demo_open_verify.cpp
cpp/dump_output/field_ouput/: golden_fields_rs.txt
cpp/dump_output/indices_output/: golden_indices_rs.txt
cpp/dump_output/matrix_commit_output/: golden_matrix_commit_rs.txt
cpp/dump_output/pow_output/: gold_pow_rs.txt
cpp/dump_output/sumcheck_output/: golden_sumcheck_cpp.txt
cpp/dump_output/whir_output/: golden_whir_rs.txt
cpp/include/whir/: bits.hpp  canonical_config.hpp  engines.hpp  parameters.hpp  profiling.hpp  utils.hpp
cpp/include/whir/algebra/: embedding.hpp  goldilocks.hpp  goldilocks_ext2.hpp  goldilocks_ext3.hpp  goldilocks_optimized.hpp  linear_form.hpp  multilinear.hpp  multilinear_point.hpp  sumcheck.hpp  utilities.hpp
cpp/include/whir/algebra/ntt/: cooley_tukey.hpp  cooley_tukey_goldilocks.hpp  matrix.hpp  mod_ntt.hpp  transpose.hpp  utils.hpp  wavelet.hpp
cpp/include/whir/hash/: blake3_engine.hpp  copy_engine.hpp  hash_counter.hpp  hash_engine.hpp  sha2_engine.hpp
cpp/include/whir/protocols/: challenge_indices.hpp  geometric_challenge.hpp  irs_commit.hpp  matrix_commit.hpp  merkle_tree.hpp  proof_of_work.hpp  sumcheck_protocol.hpp
cpp/include/whir/protocols/whir/: whir.hpp  whir_prover.hpp  whir_verifier.hpp
cpp/include/whir/protocols/whir_zk/: whir_zk.hpp  whir_zk_impl.hpp  whir_zk_utils.hpp
cpp/include/whir/transcript/: transcript.hpp
cpp/tests/: CMakeLists.txt  dump_challenge_indices.cpp  dump_golden_algebra.cpp  dump_hash.cpp  dump_matrix_commit.cpp  dump_merkle_tree.cpp  dump_pow.cpp  dump_rng.cpp  dump_sumcheck.cpp  dump_transcript.cpp  dump_whir.cpp  test_cuda_merkle_path.cpp  test_cuda_rs_encode.cpp  test_cuda_rs_encode_bytes.cpp  test_cuda_rs_sha256_leaves.cpp  test_cuda_rs_sha256_merkle.cpp  test_protocols.cpp
examples/: dump_algebra.rs  dump_challenge_indices.rs  dump_fields.rs  dump_golden_algebra.rs  dump_hash.rs  dump_irs.rs  dump_matrix_commit.rs  dump_merkle_tree.rs  dump_ntt.rs  dump_pow.rs  dump_rng.rs  dump_sumcheck.rs  dump_transcript.rs  dump_whir.rs  dump_whir_zk.rs
rust/: Cargo.toml
rust/src/: canonical_config.rs  deterministic_rng.rs  lib.rs  profiling.rs
scripts/: T400_4090_compare.py  build-cleanup.ps1  build-cleanup.sh  build.ps1  build.sh  clean_generated.ps1  clean_generated.sh  compare_cross_language_dumps.py  compare_whir.py  plot_whir_profile.py  run_cross_language_golden.py
scripts/temp/: default_cpp.err  default_cpp.out  default_cpp_no_profile_after_opts.out  default_cpp_no_shrink.err  default_cpp_no_shrink.out  default_cpp_ntt_root_opt.err  default_cpp_ntt_root_opt.out  default_cpp_pow_oodopt_t8.err  default_cpp_pow_oodopt_t8.out  default_cpp_pow_oodopt_t8_rerun.err  default_cpp_pow_oodopt_t8_rerun.out  default_cpp_powopt.err  default_cpp_powopt.out  default_cpp_powopt_t8.err  default_cpp_powopt_t8.out  default_rust.err  (+34 more)
(+62 files in other folders)
